--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,9 @@
     "iron-selector": "polymerelements/iron-selector#^1.0.0",
     "paper-icon-button": "polymerelements/paper-icon-button#^1.0.0",
     "paper-spinner": "polymerelements/paper-spinner#^1.0.0",
-    "polymer-bootstrap": "polymer-bootstrap#0.1.1"
+    "polymer-bootstrap": "polymer-bootstrap#0.1.1",
+    "iron-elements": "PolymerElements/iron-elements#^1.0.10",
+    "paper-elements": "PolymerElements/paper-elements#^1.0.7"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
